fix "upload button out of view" issue

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -948,11 +948,11 @@ Pink mode
 
 /* Height of main page*/
 .min-vh-100 {
-    min-height: 94vh !important; /*the side bar will extended if the vh is set to 100*/
+    min-height: 93vh !important; /*the side bar will extended if the vh is set to 100*/
 }
 
 .min-h-screen {
-    min-height: 91vh !important;
+    min-height: 87vh !important;
 }
 
 body{
